versions/v3.6.0/doxygen/html/globals_eval_l.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_eval_l.html
original_path: doxygen/html/globals_eval_l.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - l -

- L2\_ETH\_IF\_TYPE\_ETHERNET : [ethernet.h](group__ethernet.md#gga139cc696837611a522b289f2ea7bf6fca25c90e15f09a19a8ca7d0ea9d1836530)
- L2\_ETH\_IF\_TYPE\_WIFI : [ethernet.h](group__ethernet.md#gga139cc696837611a522b289f2ea7bf6fca32862b06ca0a77a8cf66d167c4496671)
- L2\_OFFLOADED\_NET\_IF\_TYPE\_ETHERNET : [offloaded\_netdev.h](group__offloaded__netdev.md#ggac1980977f6da3ace33ede7949d43f81fa532f2d2684118c1c7e78064b5bd7920a)
- L2\_OFFLOADED\_NET\_IF\_TYPE\_MODEM : [offloaded\_netdev.h](group__offloaded__netdev.md#ggac1980977f6da3ace33ede7949d43f81fa85328162750725aae17aa0d84a4dab21)
- L2\_OFFLOADED\_NET\_IF\_TYPE\_UNKNOWN : [offloaded\_netdev.h](group__offloaded__netdev.md#ggac1980977f6da3ace33ede7949d43f81fa46a984d855ea5731207274149b12de1d)
- L2\_OFFLOADED\_NET\_IF\_TYPE\_WIFI : [offloaded\_netdev.h](group__offloaded__netdev.md#ggac1980977f6da3ace33ede7949d43f81fab764b4fe8932593599bd26b9ebf11f24)
- LCP\_OPTION\_ADDR\_CTRL\_COMPRESS : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15ca3c37fd8819b98caa7f9b3b94aff53524)
- LCP\_OPTION\_ASYNC\_CTRL\_CHAR\_MAP : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15ca01e51712c002e5ce746d93376b4f2cef)
- LCP\_OPTION\_AUTH\_PROTO : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15cae36a806e93ebdacd7c3ad3f536c03743)
- LCP\_OPTION\_MAGIC\_NUMBER : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15ca59c791ebec909b03a42659d08be2bcf8)
- LCP\_OPTION\_MRU : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15cabedb2479b9edd3fcefe7a84d2deb41fe)
- LCP\_OPTION\_PROTO\_COMPRESS : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15cab135e1ef16bb071e1490d77b51de3bd4)
- LCP\_OPTION\_QUALITY\_PROTO : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15ca3ed6d42c4b65271955a308c4e7a437a9)
- LCP\_OPTION\_RESERVED : [ppp.h](group__ppp.md#ggac8f3d915c930d61831bcb13d6201b15caa702a3993d2a8f7d7878e1c6f43772d3)
- LINK\_FULL\_1000BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68a72eec6d30279ddb51d7e9d6d7dabb611)
- LINK\_FULL\_100BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68aa2b3167b8fb31ccbe3cd314aa82cf213)
- LINK\_FULL\_10BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68a96d36b5ff474b1919288602cc1927842)
- LINK\_HALF\_1000BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68ad2b4a4c3ff8358685316c5f056a73d04)
- LINK\_HALF\_100BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68a165dfc46d79c06755d315c2d4033b629)
- LINK\_HALF\_10BASE\_T : [phy.h](group__ethernet__phy.md#gga9b97fff9fcd6823c9b564b3e86b8da68a3010bbc6bde6ae12b39393ab34ed6c99)
- LLDP\_TLV\_CHASSIS\_ID : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899acd8e886391d4356096db264cba5383e6)
- LLDP\_TLV\_END\_LLDPDU : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899a2b7c2a5f9f23b3bd6361e09d190c859a)
- LLDP\_TLV\_MANAGEMENT\_ADDR : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899ab0219acd11fad13967aec8a30054cae5)
- LLDP\_TLV\_ORG\_SPECIFIC : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899a07dee140b7ee13ec88a271fc292887ad)
- LLDP\_TLV\_PORT\_DESC : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899a848167601f7bb7a21ce25bd1a79836c0)
- LLDP\_TLV\_PORT\_ID : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899a247164e4394c67b5ebe8da8fd71dae45)
- LLDP\_TLV\_SYSTEM\_CAPABILITIES : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899a9c81c35102ccc8baa15797f69ef95521)
- LLDP\_TLV\_SYSTEM\_DESC : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899ab99a55a2b6620c3d77cb0aeedf135782)
- LLDP\_TLV\_SYSTEM\_NAME : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899abb2ebbce9ab2e6234d443dbaa246b6d9)
- LLDP\_TLV\_TTL : [lldp.h](group__lldp.md#ggadd4273e4fe55757729008ce081771899af6c7e7e44b7c0a9b1466c4c124f2c12c)
- LLEXT\_MEM\_BSS : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a84ec2446a021fefa9e6786ad58d6986e)
- LLEXT\_MEM\_COUNT : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953ad6b134939dea35076a41f9c0b81f9265)
- LLEXT\_MEM\_DATA : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a5e8658f79b74a0916e5d0abe8f852854)
- LLEXT\_MEM\_EXPORT : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953ae6ed486ed5719bf7058b2f95aa712028)
- LLEXT\_MEM\_RODATA : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a8ad55e9d9685edd3dfc4ede21854faeb)
- LLEXT\_MEM\_SHSTRTAB : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a325e4d3b4ecdbdb2fec8451fef5b582e)
- LLEXT\_MEM\_STRTAB : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953ae0ecbbcbe2d8143f5fac4783f7157c17)
- LLEXT\_MEM\_SYMTAB : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a24549b7a2ee43076f5b8646e7fba5c81)
- LLEXT\_MEM\_TEXT : [llext.h](group__llext.md#gga9258a6fe4a45aa5dd48c80c7aa07b953a4e7f671abb8e64ad6af7033a9439b7d0)
- LOG\_BACKEND\_EVT\_MAX : [log\_backend.h](group__log__backend.md#gga04ebbd4416c907e60e05f0364f3bd2f6abbc925931ad8098f3cee651fadd5432a)
- LOG\_BACKEND\_EVT\_PROCESS\_THREAD\_DONE : [log\_backend.h](group__log__backend.md#gga04ebbd4416c907e60e05f0364f3bd2f6a559c37c58daf13a14f7b43440556f3d3)
- LORAWAN\_ACT\_ABP : [lorawan.h](group__lorawan__api.md#gga2bf50442214ecdc717f1a24dc058a338a13bb2a28232081844e36308977ec6701)
- LORAWAN\_ACT\_OTAA : [lorawan.h](group__lorawan__api.md#gga2bf50442214ecdc717f1a24dc058a338a5f262e334bc46278bec491cd022b612a)
- LORAWAN\_CLASS\_A : [lorawan.h](group__lorawan__api.md#gga88b65799c3f1d98fbce80927218c0837a538e56348e6d5b506e661e3af18aee6c)
- LORAWAN\_CLASS\_B : [lorawan.h](group__lorawan__api.md#gga88b65799c3f1d98fbce80927218c0837a79a9c205ac583051b2e072389491c7cb)
- LORAWAN\_CLASS\_C : [lorawan.h](group__lorawan__api.md#gga88b65799c3f1d98fbce80927218c0837ad158a1985688bbe54b20a8a808774547)
- LORAWAN\_DR\_0 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a4b60b8eb52c07b40cbaaf94a4c56e1f6)
- LORAWAN\_DR\_1 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86ade4655b32ca976c317fa9f44ac8b148a)
- LORAWAN\_DR\_10 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a0a18193e15d268d262d58897d39993b3)
- LORAWAN\_DR\_11 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a2a631e746ffc5c4378e39b7a90dd44e2)
- LORAWAN\_DR\_12 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a0df057cf1505ba94876deaeddd515548)
- LORAWAN\_DR\_13 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a18bfd63ae262f992d9d12f8d56cc217e)
- LORAWAN\_DR\_14 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a1ad3be15c2e60d0bb2f3c12faf279efa)
- LORAWAN\_DR\_15 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a4738baf87e0cb2e64d9c525e40dd6e0a)
- LORAWAN\_DR\_2 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a941f8a603aeb54560be7125a55c74159)
- LORAWAN\_DR\_3 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a4ac565dbaae0c6ad4e62dc34ca0c013a)
- LORAWAN\_DR\_4 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a6f6cd4ecd247f67cad08ede84649a939)
- LORAWAN\_DR\_5 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a08f879f1054ca54e488180b07d7ff952)
- LORAWAN\_DR\_6 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86acc624ccf8a9585889c3685217f56099f)
- LORAWAN\_DR\_7 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86aac8afba95d7187f0829aae7abda894d5)
- LORAWAN\_DR\_8 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86a080b31031f5a2b54d84ed49b133b0a86)
- LORAWAN\_DR\_9 : [lorawan.h](group__lorawan__api.md#gga276e66fb8ce88f853d1987686e31fc86afbc8d04236410a6107cccfd71ba4bace)
- LORAWAN\_MSG\_CONFIRMED : [lorawan.h](group__lorawan__api.md#gga5d78efba3f8e62ccd6317aed8af4bc54a40ee76ac8d0b40d06903fc06a7ef1989)
- LORAWAN\_MSG\_UNCONFIRMED : [lorawan.h](group__lorawan__api.md#gga5d78efba3f8e62ccd6317aed8af4bc54a9855d8332363a554db9dde446cc409b7)
- LORAWAN\_REGION\_AS923 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da6a1ba05859d575a28095437436c8e6a6)
- LORAWAN\_REGION\_AU915 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da2744fe63701f5a5f23706b6f37672c70)
- LORAWAN\_REGION\_CN470 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da52d67181588c94d2a423040b4b5a1de4)
- LORAWAN\_REGION\_CN779 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627dadb106a189c4c647e5e3af89cc753e0d8)
- LORAWAN\_REGION\_EU433 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627dabcb9529d8f449bcb85a893fdd20f9180)
- LORAWAN\_REGION\_EU868 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da404530e5008260260131de051283f7ba)
- LORAWAN\_REGION\_IN865 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da9113b34d94da40149442f432fd97e86c)
- LORAWAN\_REGION\_KR920 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627dafae64ea9dd2c2ee7e897fc0f94484da5)
- LORAWAN\_REGION\_RU864 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627dad30a636d45def6889e2b5cbf60f28c0e)
- LORAWAN\_REGION\_US915 : [lorawan.h](group__lorawan__api.md#ggacb8efaa0761f8761146a0e913dcb627da70e25dd006efc115617631f64cc34c88)
- LR : [gdbstub.h](arch_2arm_2gdbstub_8h.md#a0d4c0f1339778bac80a5871c979605aba6d456bf17ff1ba9f670c09ae9abb1305)
- LWM2M\_OBSERVE\_EVENT\_NOTIFY\_ACK : [lwm2m.h](group__lwm2m__api.md#ggac8d63952ec94ca6cfb1dbe12a6c53bfbaab4e1cf0451ba926b90ea21152cac885)
- LWM2M\_OBSERVE\_EVENT\_NOTIFY\_TIMEOUT : [lwm2m.h](group__lwm2m__api.md#ggac8d63952ec94ca6cfb1dbe12a6c53bfba55494fd6e76f585894e34dc9004fbc9e)
- LWM2M\_OBSERVE\_EVENT\_OBSERVER\_ADDED : [lwm2m.h](group__lwm2m__api.md#ggac8d63952ec94ca6cfb1dbe12a6c53bfba22f4341d713417110d9866b0cbd318e3)
- LWM2M\_OBSERVE\_EVENT\_OBSERVER\_REMOVED : [lwm2m.h](group__lwm2m__api.md#ggac8d63952ec94ca6cfb1dbe12a6c53bfbae3f4af98b52ee191229c660748c7dd6c)
- LWM2M\_RD\_CLIENT\_EVENT\_BOOTSTRAP\_REG\_COMPLETE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862ac30dd8520e591c8e51c74ce1a53cd524)
- LWM2M\_RD\_CLIENT\_EVENT\_BOOTSTRAP\_REG\_FAILURE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862ac089b900494522de565e36d31ea3b0c4)
- LWM2M\_RD\_CLIENT\_EVENT\_BOOTSTRAP\_TRANSFER\_COMPLETE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a7c7c3115b6ff16dfa722b6b82c2cd1bc)
- LWM2M\_RD\_CLIENT\_EVENT\_DEREGISTER : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862aac3938a209800a0de0a05b21fab02c13)
- LWM2M\_RD\_CLIENT\_EVENT\_DEREGISTER\_FAILURE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a32552b56152f9a714675fc6bba3b3d5f)
- LWM2M\_RD\_CLIENT\_EVENT\_DISCONNECT : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862ac6703e7d0809cc9cfcdd1cbd48e2318b)
- LWM2M\_RD\_CLIENT\_EVENT\_ENGINE\_SUSPENDED : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862afd4eda5dee31b18b1da5414481e33525)
- LWM2M\_RD\_CLIENT\_EVENT\_NETWORK\_ERROR : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862aff939a86c623ab8258c707361b95aef4)
- LWM2M\_RD\_CLIENT\_EVENT\_NONE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862aca4ebc8d550af02f1891eed1a7b1afcc)
- LWM2M\_RD\_CLIENT\_EVENT\_QUEUE\_MODE\_RX\_OFF : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a7c7853536c452da2f74e9f43a024fcbe)
- LWM2M\_RD\_CLIENT\_EVENT\_REG\_TIMEOUT : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a90341c0d9584681f18d1cae91c9f6404)
- LWM2M\_RD\_CLIENT\_EVENT\_REG\_UPDATE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862ab48772aeed0ead72f3a9289a618af1cd)
- LWM2M\_RD\_CLIENT\_EVENT\_REG\_UPDATE\_COMPLETE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a9f53175c5e935f061a83aa1fcfe9f683)
- LWM2M\_RD\_CLIENT\_EVENT\_REGISTRATION\_COMPLETE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a8994ea8c025cbbd56adcc050a7e86541)
- LWM2M\_RD\_CLIENT\_EVENT\_REGISTRATION\_FAILURE : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862ae89498cad338b1dc9cbd3b23838bf0b6)
- LWM2M\_RD\_CLIENT\_EVENT\_SERVER\_DISABLED : [lwm2m.h](group__lwm2m__api.md#ggaca90ab8960a4ff01d44735dbc0405862a873a4a3190dc7c24d2518dc8d7268763)
- LWM2M\_SECURITY\_CERT : [lwm2m.h](group__lwm2m__api.md#gga11de8078091631cb88b26a9a460097aba6eef062c9f54bc9698a050c8bb2915ba)
- LWM2M\_SECURITY\_CERT\_EST : [lwm2m.h](group__lwm2m__api.md#gga11de8078091631cb88b26a9a460097abaefb45683a68002dab267c3fb2e876824)
- LWM2M\_SECURITY\_NOSEC : [lwm2m.h](group__lwm2m__api.md#gga11de8078091631cb88b26a9a460097abaf6bb17f06d89124076810c132005f8d7)
- LWM2M\_SECURITY\_PSK : [lwm2m.h](group__lwm2m__api.md#gga11de8078091631cb88b26a9a460097aba0d4e9d5160e91fc93e062dfb812edb25)
- LWM2M\_SECURITY\_RAW\_PK : [lwm2m.h](group__lwm2m__api.md#gga11de8078091631cb88b26a9a460097aba431ac48d7f0fed72ce5ab2c8ea823716)
- LWM2M\_SEND\_STATUS\_FAILURE : [lwm2m.h](group__lwm2m__api.md#gga20848e0942882e8c2cc40ee8a48b7bfda7a7f1720f39bedba28110fad09939dcd)
- LWM2M\_SEND\_STATUS\_SUCCESS : [lwm2m.h](group__lwm2m__api.md#gga20848e0942882e8c2cc40ee8a48b7bfda127cca7752ab3f00d5a4705f815b14b4)
- LWM2M\_SEND\_STATUS\_TIMEOUT : [lwm2m.h](group__lwm2m__api.md#gga20848e0942882e8c2cc40ee8a48b7bfda7c0144cafd4f91a76d229b40df9cb82a)
- LWM2M\_SOCKET\_STATE\_LAST : [lwm2m.h](group__lwm2m__api.md#gga7611c1aebb0309ee8340e06dd8ee234daed676a6deffe2de7c916bb6eb2906100)
- LWM2M\_SOCKET\_STATE\_NO\_DATA : [lwm2m.h](group__lwm2m__api.md#gga7611c1aebb0309ee8340e06dd8ee234da2487ae8e93929bf62fd333cd04c5b915)
- LWM2M\_SOCKET\_STATE\_ONE\_RESPONSE : [lwm2m.h](group__lwm2m__api.md#gga7611c1aebb0309ee8340e06dd8ee234da76aa03f71f44096d9413b1f5718d9711)
- LWM2M\_SOCKET\_STATE\_ONGOING : [lwm2m.h](group__lwm2m__api.md#gga7611c1aebb0309ee8340e06dd8ee234daa0f06bc70659598b0f51b3ce8094c6ab)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
